# QtHelloWorld

./: .gitignore  CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindowQml.cpp  MainWindowQml.h  README.md  main.cpp  resources.qrc
Qml/: Main.qml
